<resources>
    <string name="app_name">ExpressPublic</string>
    <string name="hockeyapp_app_id">275b3c05f97b2c82b5ff82aeb833d544</string>
    <string name="google_api_key">AIzaSyDWx0SeI0Wf4Dd_gkDt0948jJEuFyhPkAY</string>
    <string name="gcm_senderId">1086823731657</string>
    <string name="title_home">YiLinker Express</string>
    <string name="title_login">Login</string>
    <string name="title_registration">Registration</string>
    <string name="title_search_branches">Search Branches</string>
    <string name="title_my_shipments">My Shipments</string>
    <string name="title_book_delivery">Book A Delivery</string>
    <string name="title_track_delivery">Track Delivery</string>
    <string name="title_branch_details">Branch Details</string>
    <string name="title_select_area">Select Area</string>
    <string name="title_direction">Direction</string>
    <string name="title_my_address_locations">My Address Locations</string>
    <string name="title_track_details">Track Details</string>
    <string name="title_scan_tracking_code">Scan Tracking Code</string>
    <string name="title_package_details">Package Details</string>
    <string name="title_dimension_and_weight"><![CDATA[Dimension & Weight]]></string>
    <string name="title_my_account">My Account</string>
    <string name="title_update_profile">Update Profile</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_bookmarked_branches">Bookmarked Branches</string>
    <string name="title_pickup_schedule">Pickup Schedule</string>
    <string name="title_my_recipients_locations">My Recipients Locations</string>
    <string name="title_change_binding_mobile">Change Binding Mobile</string>
    <string name="title_booking_successful">Booking Successful</string>
    <string name="profile_message_user_details_successful">User details updated successfully!</string>
    <string name="profile_message_mobile_successful">Mobile number changed successfully!</string>
    <string name="profile_message_password_successful">Password changed successfully!</string>
    <string name="subtitle_package_photos">Photos</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_enter_your_new_mobile_number">Enter your new mobile number</string>
    <string name="error">Error</string>
    <string name="error_invalid_address_group_name">Invalid address group name.</string>
    <string name="error_invalid_verification_code">Invalid verification code.</string>
    <string name="error_invalid_mobile_number">The mobile number should be 11 digits long.</string>
    <string name="error_maximum_photo_upload">Already reached maximum photo upload.</string>
    <string name="error_no_location">Can\'t find location.</string>
    <string name="error_no_location_services">Turn on your location services.</string>
    <string name="error_invalid_tracking_number">Invalid tracking number.</string>
    <string name="error_invalid_credentials">Invalid username and password combination.</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_no_internet_connection">Please connect to the internet.</string>
    <string name="loading_registration">Registering&#8230;</string>
    <string name="loading_login">Signing in&#8230;</string>
    <string name="loading_registration_token">Getting registration permission&#8230;</string>
    <string name="loading_processing">Processing&#8230;</string>
    <string name="loading_getting_direction">Getting direction&#8230;</string>
    <string name="loading_searching_branches">Searching branches&#8230;</string>
    <string name="loading_tracking">Tracking&#8230;</string>
    <string name="loading_getting_package_container">Getting package container&#8230;</string>
    <string name="loading_account_information">Loading account information&#8230;</string>
    <string name="loading_changing_user_details">Changing user details&#8230;</string>
    <string name="loading_changing_password">Changing password&#8230;</string>
    <string name="loading_getting_address_group">Getting address group&#8230;</string>
    <string name="loading_adding_address_group">Adding address group&#8230;</string>
    <string name="loading_getting_provinces">Loading provinces&#8230;</string>
    <string name="loading_getting_cities">Loading cities&#8230;</string>
    <string name="loading_getting_barangays">Loading barangays&#8230;</string>
    <string name="loading_adding_address_location">Adding address location&#8230;</string>
    <string name="loading_requesting_verification_code">Requesting verification code&#8230;</string>
    <string name="loading_updating_mobile">Updating mobile&#8230;</string>
    <string name="loading_booking_delivery">Booking delivery&#8230;</string>
    <string name="label_message_from">Please enter sender\'s full name and complete address</string>
    <string name="label_message_to">Please enter your recipient\'s full name and complete address</string>
    <string name="label_message_package_details">Please enter your package details</string>
    <string name="label_message_package_size">Please enter your package size and weight</string>
    <string name="label_message_pick_up_schedule">Please enter desired pickup schedule</string>
    <string name="label_booking_number">Booking Number</string>
    <string name="label_from">From</string>
    <string name="label_to">To</string>
    <string name="label_package_details">Package Details</string>
    <string name="label_package_size">Package Size</string>
    <string name="label_pickup_schedule">Pickup Schedule</string>
    <string name="firstname">FIRST NAME</string>
    <string name="lastname">LAST NAME</string>
    <string name="email">EMAIL</string>
    <string name="contact">CONTACT</string>
    <string name="password">PASSWORD</string>
    <string name="submit_and_update">Submit and Update</string>
    <string name="registration">Registration</string>
    <string name="back_to_home">Back to Home</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="track_a_delivery">Track A Delivery</string>
    <string name="find_branch">Find Branch</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="book_delivery">Book Delivery</string>
    <string name="my_shipment">My Shipment</string>
    <string name="logout">Logout</string>
    <string name="select_area">Select Area</string>
    <string name="branch_nearest_to_me">Branch Nearest to Me</string>
    <string name="bookmark_branch">Bookmark Branch</string>
    <string name="unbookmark_branch">Unbookmark Branch</string>
    <string name="philippines">Philippines</string>
    <string name="call">Call</string>
    <string name="direction">Direction</string>
    <string name="search">Search</string>
    <string name="search_history">Search History</string>
    <string name="search_results">Search Results</string>
    <string name="pick_up_service">Pick Up Service</string>
    <string name="cash_collection">Cash Collection</string>
    <string name="express_delivery">Express Delivery</string>
    <string name="free_packaging">Free Packaging</string>
    <string name="submit_booking">Submit Booking</string>
    <string name="new_sender_detail">New Sender Detail</string>
    <string name="title_new_sender_detail">New Sender Detail</string>
    <string name="full_name">Full Name</string>
    <string name="contact_no">Contact No</string>
    <string name="unit_floor_no">Unit/Floor No</string>
    <string name="building_name">Building Name</string>
    <string name="street_no">Street No</string>
    <string name="street_name">Street Name</string>
    <string name="subdivision_village">Subdivision</string>
    <string name="barangay">Barangay</string>
    <string name="city">City</string>
    <string name="provinceWithCity">Province</string>
    <string name="zip_code">Zip Code</string>
    <string name="submit">Submit</string>
    <string name="enter_tracking_code">Enter tracking code</string>
    <string name="dimension_and_weight_message">Please provide your package detail as much as possible for a more accurate shipping fee.\n\n If your product has an additional packaging material, e.g. box, bubble wrap, please use those details.</string>
    <string name="length">Length</string>
    <string name="cm">cm</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="track">Track</string>
    <string name="cancel">Cancel</string>
    <string name="package_name">Package Name</string>
    <string name="sku">SKU</string>
    <string name="declared_value">Declared Value</string>
    <string name="fragile">Fragile</string>
    <string name="quantity">Quantity</string>
    <string name="image">Image</string>
    <string name="add">Add</string>
    <string name="default_image_count">0 Images</string>
    <string name="paid_by">Paid by</string>
    <string name="paid_by_sender">Paid By</string>
    <string name="gold_member">Gold Member</string>
    <string name="my_bookmarked_branches">My Bookmarked Branches</string>
    <string name="my_address_locations">My Address Locations</string>
    <string name="my_recipients_locations">My Recipients Locations</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="select_schedule">Select Schedule</string>
    <string name="select_date">Select Date</string>
    <string name="select_pickup_schedule">Select Pick Up Schedule</string>
    <string name="birthdate">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="add_address_location">Add Address Location</string>
    <string name="add_address_group">Add Address Group</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="select_province">Select Province</string>
    <string name="select_location">Select Location</string>
    <string name="village">Village</string>
    <string name="country_code">Country Code</string>
    <string name="old_mobile">Old Mobile</string>
    <string name="philippines_country_code">Philippines +63</string>
    <string name="new_mobile">New Mobile</string>
    <string name="confirm_entries">Confirm Entries</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="enter_verification_code_message">A verification code has been sent to your mobile number.</string>
    <string name="resend_verification_code">Resend Verification Code</string>
    <string name="success_booking">Success Booking!</string>
    <string name="view_ongoing_list">View Ongoing List</string>
    <string name="select_gender">Select Gender</string>
    <string name="new_recipient_detail">New Recipient Detail</string>
    <string name="package_description">Package Description</string>
    <string name="package_image_path">filepath</string>
    <string name="booking_successful">Your booking has been successfully submitted.</string>
    <string name="declared_weight">Declared Weight</string>
    <string name="outgoing_list_message">Already added to on-going list. Click "View On-going List" to view.</string>
    <string name="asterisk">*</string>
    <string name="delivered_remarks">Thank you for using YiLinker Express, hope to serve you soon again.</string>
</resources>