<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center_horizontal"
    android:background="@android:color/white">

    <!-- Logo -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/logo"
        android:scaleType="centerInside"/>

    <!-- Email -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:gravity="bottom">

        <!-- Email logo -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_email"/>

        <com.yilinker.expresspublic.modules.common.customviews.CustomEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="24sp"
            android:textColor="@color/warm_grey"
            android:hint="@string/hint_email"
            android:textColorHint="@color/warm_grey"
            android:background="@null"
            app:fontName="Roboto-Regular.ttf"/>
    </LinearLayout>

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:background="@color/divider"/>

    <!-- Password -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:gravity="bottom">

        <!-- Email logo -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_password"/>

        <com.yilinker.expresspublic.modules.common.customviews.CustomEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="24sp"
            android:textColor="@color/warm_grey"
            android:hint="@string/hint_password"
            android:textColorHint="@color/warm_grey"
            android:background="@null"
            app:fontName="Roboto-Regular.ttf"/>
    </LinearLayout>

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:background="@color/divider"/>

    <!-- Signin -->
    <com.yilinker.expresspublic.modules.common.customviews.CustomButton
        android:id="@+id/btn_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/sign_in"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:background="@drawable/bg_rect_orange_yellow"
        android:gravity="center"
        app:fontName="Roboto-Regular.ttf"/>

    <!-- Register -->
    <com.yilinker.expresspublic.modules.common.customviews.CustomButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/register"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:background="@drawable/bg_rect_marigold"
        android:gravity="center"
        app:fontName="Roboto-Regular.ttf"/>

    <!-- Back to home -->
    <com.yilinker.expresspublic.modules.common.customviews.CustomButton
        android:id="@+id/btn_backToHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/back_to_home"
        android:textSize="22sp"
        android:textColor="@color/orange_red"
        android:textAllCaps="false"
        android:gravity="center"
        android:background="@null"
        app:fontName="Roboto-Regular.ttf"/>

</LinearLayout>