<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- Firstname -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginBottom="18dp"
        android:orientation="vertical">
        <com.yilinker.expresspublic.modules.common.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/firstname"
            android:textSize="14sp"
            android:textColor="@color/greyish_brown"
            app:fontName="Roboto-Medium.ttf"/>
        <com.yilinker.expresspublic.modules.common.customviews.CustomEditText
            android:id="@+id/et_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textSize="14sp"
            android:textColor="@color/greyish_brown"
            android:background="@drawable/bg_input"
            app:fontName="Roboto-Medium.ttf"/>
    </LinearLayout>

    <!-- Lastname -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginBottom="18dp"
        android:orientation="vertical">
        <com.yilinker.expresspublic.modules.common.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/lastname"
            android:textSize="14sp"
            android:textColor="@color/greyish_brown"
            app:fontName="Roboto-Medium.ttf"/>
        <com.yilinker.expresspublic.modules.common.customviews.CustomEditText
            android:id="@+id/et_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textSize="14sp"
            android:textColor="@color/greyish_brown"
            android:background="@drawable/bg_input"
            app:fontName="Roboto-Medium.ttf"/>
    </LinearLayout>

    <!-- Email -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginBottom="18dp"
        android:orientation="vertical">
        <com.yilinker.expresspublic.modules.common.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/email"
            android:textSize="14sp"
            android:textColor="@color/greyish_brown"
            app:fontName="Roboto-Medium.ttf"/>
        <com.yilinker.expresspublic.modules.common.customviews.CustomEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:textColor="@color/greyish_brown"
            android:background="@drawable/bg_input"
            app:fontName="Roboto-Medium.ttf"/>
    </LinearLayout>

    <!-- Contact -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginBottom="18dp"
        android:orientation="vertical"
        android:visibility="gone">
        <com.yilinker.expresspublic.modules.common.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/contact"
            android:textSize="14sp"
            android:textColor="@color/greyish_brown"
            app:fontName="Roboto-Medium.ttf"/>
        <com.yilinker.expresspublic.modules.common.customviews.CustomEditText
            android:id="@+id/et_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="14sp"
            android:textColor="@color/greyish_brown"
            android:background="@drawable/bg_input"
            app:fontName="Roboto-Medium.ttf"/>
    </LinearLayout>

    <!-- Password -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginBottom="18dp"
        android:orientation="vertical">
        <com.yilinker.expresspublic.modules.common.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/password"
            android:textSize="14sp"
            android:textColor="@color/greyish_brown"
            app:fontName="Roboto-Medium.ttf"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <com.yilinker.expresspublic.modules.common.customviews.CustomEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:textColor="@color/greyish_brown"
                android:background="@drawable/bg_input"
                app:fontName="Roboto-Medium.ttf"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:id="@+id/iv_show_password"
                android:src="@drawable/ic_track_a_delivery"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="5dp" />

        </RelativeLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- Submit and Update -->
    <com.yilinker.expresspublic.modules.common.customviews.CustomButton
        android:id="@+id/btn_submitAndUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:text="@string/submit"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:background="@drawable/bg_rect_marigold"
        android:gravity="center"
        app:fontName="Roboto-Regular.ttf"/>

</LinearLayout>